k8s_yaml/clickhouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\k8s\bin\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: clickhouse
  name: clickhouse
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: clickhouse
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\k8s\bin\kompose.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/mogo-net: "true"
        io.kompose.service: clickhouse
    spec:
      containers:
        - env:
            - name: CLICKHOUSE_PASSWORD
              value: shimo
            - name: CLICKHOUSE_USER
              value: root
          image: clickhouse/clickhouse-server:latest
          name: clickhouse
          ports:
            - containerPort: 8123
            - containerPort: 9000
          resources: {}
      restartPolicy: Always
status: {}
