k8s_yaml/fluent-bit-deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    kompose.cmd: D:\k8s\bin\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: fluent-bit
  name: fluent-bit
spec:
  selector:
    matchLabels:
      io.kompose.service: fluent-bit
  template:
    metadata:
      annotations:
        kompose.cmd: D:\k8s\bin\kompose.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/mogo-net: "true"
        io.kompose.service: fluent-bit
    spec:
      containers:
        - env:
            - name: KAFKA_BROKERS
              value: kafka:9092
          image: fluent/fluent-bit:1.8.12-debug
          name: fluent-bit
          ports:
            - containerPort: 2020
          resources: {}
          volumeMounts:
            - mountPath: /fluent-bit/etc/
              name: fluent-bit-claim0
            - mountPath: /var/log/containers
              name: fluent-bit-claim1
      restartPolicy: Always
      volumes:
        - name: fluent-bit-claim0
          persistentVolumeClaim:
            claimName: fluent-bit-claim0
        - name: fluent-bit-claim1
          persistentVolumeClaim:
            claimName: fluent-bit-claim1
