k8s_yaml/kowl-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\k8s\bin\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: kowl
  name: kowl
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kowl
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: D:\k8s\bin\kompose.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/mogo-net: "true"
        io.kompose.service: kowl
    spec:
      containers:
        - env:
            - name: KAFKA_BROKERS
              value: kafka:9092
          image: rsmnarts/kowl
          name: kowl
          ports:
            - containerPort: 19002
          resources: {}
      restartPolicy: Always
status: {}
