k8s_yaml/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\k8s\bin\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\k8s\bin\kompose.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/mogo-net: "true"
        io.kompose.service: mysql
    spec:
      containers:
        - args:
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_general_ci
            - --port=13306
            - --init-file=/data/migration/latest.sql
          image: mysql:5.7.24
          name: mysql
          ports:
            - containerPort: 13306
          resources: {}
          volumeMounts:
            - mountPath: "/data/migration"
              name: mysql-storage
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-claim0
status: {}
