k8s_yaml/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\k8s\bin\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\k8s\bin\kompose.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/mogo-net: "true"
        io.kompose.service: nginx
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 19003
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: nginx-claim0
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-claim1
            - mountPath: /etc/nginx/conf.d
              name: nginx-claim2
            - mountPath: /var/log/nginx
              name: nginx-claim3
      restartPolicy: Always
      volumes:
        - name: nginx-claim0
          persistentVolumeClaim:
            claimName: nginx-claim0
        - name: nginx-claim1
          persistentVolumeClaim:
            claimName: nginx-claim1
        - name: nginx-claim2
          persistentVolumeClaim:
            claimName: nginx-claim2
        - name: nginx-claim3
          persistentVolumeClaim:
            claimName: nginx-claim3
status: {}
