k8s_yaml/zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\k8s\bin\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: zookeeper
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zookeeper
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\k8s\bin\kompose.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/mogo-net: "true"
        io.kompose.service: zookeeper
    spec:
      containers:
        - env:
            - name: ALLOW_ANONYMOUS_LOGIN
              value: "yes"
          image: zookeeper
          name: zookeeper
          ports:
            - containerPort: 2181
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: zookeeper-claim0
            - mountPath: /datalog
              name: zookeeper-claim1
      restartPolicy: Always
      volumes:
        - name: zookeeper-claim0
          persistentVolumeClaim:
            claimName: zookeeper-claim0
        - name: zookeeper-claim1
          persistentVolumeClaim:
            claimName: zookeeper-claim1
status: {}
