k8s_yaml/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\k8s\bin\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "19001"
      port: 19001
      targetPort: 19001
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
