k8s_yaml/clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\k8s\bin\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: clickhouse
  name: clickhouse
spec:
  ports:
    - name: "8123"
      port: 8123
      targetPort: 8123
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: clickhouse
status:
  loadBalancer: {}
