k8s_yaml/fluent-bit-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\k8s\bin\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: fluent-bit
  name: fluent-bit
spec:
  ports:
    - name: "2020"
      port: 2020
      targetPort: 2020
  selector:
    io.kompose.service: fluent-bit
status:
  loadBalancer: {}
