k8s_yaml/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\k8s\bin\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  ports:
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    io.kompose.service: kafka
status:
  loadBalancer: {}
