k8s_yaml/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\k8s\bin\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  ports:
    - name: "13306"
      port: 13306
      targetPort: 13306
  selector:
    io.kompose.service: mysql
status:
  loadBalancer: {}
