k8s_yaml/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\k8s\bin\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "19003"
      port: 19003
      targetPort: 19003
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
