k8s_yaml/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\k8s\bin\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  ports:
    - name: "6380"
      port: 6380
      targetPort: 6380
  selector:
    io.kompose.service: redis
status:
  loadBalancer: {}
