k8s_yaml/mogo-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: mogo-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/mogo-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/mogo-net: "true"
